@@ -45,7 +45,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.19.1</version>
         <configuration>
-          <argLine>-server -Xmx2g -XX:MaxPermSize=512m</argLine>
+          <argLine>-server -Xmx2g</argLine>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
           <includes>
